Name:                gitlib-libgit2
Version:             3.1.2
Synopsis:            Libgit2 backend for gitlib
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Libgit2 (<http://libgit2.github.com>) backend for @gitlib@.

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Test-suite smoke
    Default-language: Haskell98
    ghc-options: -Wall
    Type: exitcode-stdio-1.0
    Main-is: Smoke.hs
    Hs-source-dirs: test
    Build-depends:
          base >=3
        , gitlib             >= 3.1.1
        , gitlib-test        >= 3.0.0
        , gitlib-libgit2
        , HUnit              >= 1.2.5
        , hspec              >= 1.4.4
        , hspec-expectations >= 0.3
        , exceptions         >= 0.6
        , transformers       >= 0.3.0.0

Library
    default-language:   Haskell98
    default-extensions: ForeignFunctionInterface
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 3.1.1
        , hlibgit2             >= 0.18.0.11
        , bytestring           >= 0.9.2.1
        , conduit              >= 1.1.0
        , conduit-combinators  >= 1
        , containers           >= 0.4.2.1
        , directory            >= 1.1.0.2
        , exceptions           >= 0.6
        , fast-logger
        , filepath             >= 1.3.0
        , mmorph               >= 1.0.0
        , monad-loops          >= 0.3.3.0
        , mtl                  >= 2.1.2
        , resourcet            >= 1.1.0
        , stm                  >= 2.4
        , stm-conduit          >= 2.3.0
        , tagged               >= 0.2.3.1
        , template-haskell
        , text                 >= 0.11.2
        , text-icu             >= 0.6.3
        , time                 >= 1.4
        , transformers         >= 0.3.0.0
        , transformers-base    >= 0.4.1
        , unliftio-core        >= 0.1.1
        , unliftio
    exposed-modules:
        Git.Libgit2
        Git.Libgit2.Backend
        Git.Libgit2.Internal
        Git.Libgit2.Trace
        Git.Libgit2.Types
    if impl (ghc < 7.10)
        build-depends: missing-foreign >= 0.1.1
        cpp-options: -Dmissing_calloc
