Name:                gitlib-s3
Version:             1.1.1
Synopsis:            Gitlib repository backend for storing Git objects in Amazon S3
Description:         Gitlib repository backend for storing Git objects in Amazon S3.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Test-suite smoke
  default-language: Haskell98
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib             >= 1.1.0
    , gitlib-s3          >= 1.1.0
    , gitlib-test        >= 1.1.0
    , gitlib-libgit2     >= 1.1.0
    , hlibgit2           >= 0.18.0.1
    , aws                >= 0.7.5
    , HUnit              >= 1.2.5
    , hspec              >= 1.4.4
    , hspec-expectations >= 0.3
    , data-default       >= 0.5.1
    , resourcet          >= 0.4.6
    , system-fileio      >= 0.3.9
    , system-filepath    >= 0.4.7
    , temporary          >= 1.1.2.4
    , text               >= 0.11.2
    , transformers       >= 0.2.2

Library
  ghc-options: -Wall
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base                 >= 3 && < 5
    , gitlib               >= 1.1.0
    , gitlib-libgit2       >= 1.1.0
    , ghc-prim
    , hlibgit2             >= 0.18.0.1
    , HUnit                >= 1.2.5
    , aeson                >= 0.6.1.0
    , attempt              >= 0.4.0
    , aws                  >= 0.7.5
    , bifunctors           >= 3.2.0.1
    , binary               >= 0.5.1.0
    , bytestring           >= 0.9.2.1
    , conduit              >= 0.5.5
    , containers           >= 0.4.2
    , data-default         >= 0.5.1
    , directory            >= 1.1.0.2
    , either               >= 3.4
    , errors               >= 1.4.1
    , http-conduit         >= 1.8.5.1
    , lens                 >= 3.8
    , lifted-base          >= 0.2.0.2
    , resourcet            >= 0.4.6
    , retry                >= 0.2.0.0
    , stm                  >= 2.4.2
    , system-fileio        >= 0.3.9
    , system-filepath      >= 0.4.7
    , tagged               >= 0.4.4
    , text                 >= 0.11.2
    , time                 >= 1.4
    , transformers         >= 0.2.2
    , unordered-containers >= 0.2.3.0
  exposed-modules:
    Git.S3
