Name:                gitlib-s3
Version:             3.1.0
Synopsis:            Gitlib repository backend for storing Git objects in Amazon S3
Description:         Gitlib repository backend for storing Git objects in Amazon S3.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            Git

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Test-suite smoke
  default-language: Haskell98
  ghc-options: -Wall
  type: exitcode-stdio-1.0
  main-is: Smoke.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , gitlib             >= 3.0.0
    , gitlib-s3          >= 3.0.0
    , gitlib-test        >= 3.0.0
    , gitlib-libgit2     >= 3.0.0
    , hlibgit2           >= 0.18.0.11
    , aws                >= 0.9
    , exceptions         >= 0.6
    , HUnit              >= 1.2.5
    , hspec              >= 1.4.4
    , hspec-expectations >= 0.3
    , data-default       >= 0.5.1
    , directory          >= 1.1.0.2
    , exceptions         >= 0.6
    , filepath           >= 1.3.0
    , monad-logger       >= 0.3.1.1
    , resourcet          >= 1.1.0
    , temporary          >= 1.1.2.4
    , text               >= 0.11.2
    , transformers       >= 0.2.2

Library
  ghc-options: -Wall
  hs-source-dirs: .
  default-language: Haskell98
  build-depends:
      base                 >= 3 && < 5
    , gitlib               >= 3.0.0
    , gitlib-libgit2       >= 3.0.0
    , ghc-prim
    , hlibgit2             >= 0.18.0.11
    , aeson                >= 0.6.1.0
    , attempt              >= 0.4.0
    , aws                  >= 0.9
    , bifunctors           >= 3.2.0.1
    , binary               >= 0.5.1.0
    , bytestring           >= 0.9.2.1
    , conduit              >= 1.1.0
    , conduit-combinators  >= 0.2.4
    , data-default         >= 0.5.1
    , directory            >= 1.1.0.2
    , exceptions           >= 0.6
    , filepath             >= 1.3.0
    , http-conduit         >= 2.0
    , lens                 >= 3.8
    , lifted-base          >= 0.2.0.2
    , monad-control
    , monad-logger         >= 0.3.6.1
    , resourcet            >= 1.1.2.2
    , retry                >= 0.2.0.0
    , split                >= 0.2
    , stm                  >= 2.4
    , text                 >= 0.11.2
    , template-haskell
    , time                 >= 1.4
    , transformers         >= 0.2.2
    , unordered-containers >= 0.2.3.0
  exposed-modules:
    Git.S3
