Name:                gitlib-sample
Version:             1.4.0
Synopsis:            Sample backend for gitlib showing the basic structure for any backend.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Sample backend for @gitlib@.

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

-- Test-suite smoke
--     Default-language: Haskell98
--     Type: exitcode-stdio-1.0
--     Main-is: Smoke.hs
--     Hs-source-dirs: test
--     Build-depends: 
--           base >=3
--         , gitlib             >= 1.4.0
--         , gitlib-test        >= 1.4.0
--         , gitlib-sample      >= 1.4.0
--         , HUnit              >= 1.2.5
--         , hspec              >= 1.4.4
--         , hspec-expectations >= 0.3

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 1.4.0
        , failure              >= 0.2.0.1
        , system-filepath      >= 0.4.7
        , tagged               >= 0.2.3.1
        , transformers         >= 0.3.0.0
    exposed-modules:
        Git.Sample
