Name:                gitlib-test
Version:             1.3.1
Synopsis:            Test library for confirming gitlib backend compliance
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Test library for confirming gitlib backend compliance

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

-- Test-suite sanity
--     Default-language: Haskell98
--     Type: exitcode-stdio-1.0
--     Main-is: Sanity.hs
--     Hs-source-dirs: test
--     Build-depends: 
--           base >=3
--         , gitlib               >= 1.3.1
--         , gitlib-test          >= 1.3.1
--         , HUnit                >= 1.2.5
--         , SHA                  >= 1.4.0
--         , bytestring           >= 0.9.2.1
--         , failure              >= 0.2.0.1
--         , hex                  >= 0.1.2
--         , hspec                >= 1.4.4
--         , hspec-expectations   >= 0.3
--         , system-filepath      >= 0.4.7
--         , tagged               >= 0.4.4
--         , text                 >= 0.11.2
--         , transformers         >= 0.3
--         , unordered-containers >= 0.2.3

Library
    default-language:   Haskell98
    default-extensions: ForeignFunctionInterface
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 1.3.1
        , HUnit                >= 1.2.5
        , hspec                >= 1.4.4
        , hspec-expectations   >= 0.3
        , bytestring           >= 0.9.2
        , monad-control        >= 0.3.1
        , system-fileio        >= 0.3.9
        , system-filepath      >= 0.4.7
        , tagged               >= 0.4.4
        , text                 >= 0.11.2
        , time                 >= 1.4
        , transformers         >= 0.3
    exposed-modules:
        Git.Smoke
