Name:                gitlib-test
Version:             2.2.0.0
Synopsis:            Test library for confirming gitlib backend compliance
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  Test library for confirming gitlib backend compliance

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Library
    default-language:   Haskell98
    default-extensions: ForeignFunctionInterface
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 2.2.0.0
        , HUnit                >= 1.2.5
        , hspec                >= 1.4.4
        , hspec-expectations   >= 0.3
        , bytestring
        , conduit
        , monad-control        >= 0.3.1
        , tagged               >= 0.4.4
        , text                 >= 0.11.2
        , time                 >= 1.4
        , transformers         >= 0.3
    exposed-modules:
        Git.Smoke
