Name:                gitlib-utils
Version:             1.1.1
Synopsis:            Generic utility functions for working with Git repositories
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  @gitlib@ is a high-level, lazy and conduit-aware set of abstractions for
  programming with Git types.

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

-- Test-suite doctests
--     Default-language: Haskell98
--     Type:    exitcode-stdio-1.0
--     Main-is: Doctest.hs
--     Hs-source-dirs: test
--     Build-depends:
--           base
--         , directory    >= 1.0
--         , doctest      >= 0.8
--         , doctest-prop >= 0.1
--         , filepath     >= 1.3

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , gitlib               >= 1.1.0
        , bytestring           >= 0.9.2.1
        , conduit              >= 0.5.5
        , data-default         >= 0.5.1
        , failure              >= 0.2.0.1
        , hex                  >= 0.1.2
        , lifted-base          >= 0.2.0.2
        , system-fileio        >= 0.3.11
        , system-filepath      >= 0.4.7
        , tagged               >= 0.2.3.1
        , text                 >= 0.11.2
        , transformers         >= 0.3.0.0
        , unordered-containers >= 0.2.3.0
    exposed-modules:
        Git.Utils
