Name:                gitlib-utils
Version:             1.3.2
Synopsis:            This package is now deprecated.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@newartisans.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  This package is now deprecated.  It's functionality was moved into just 'gitlib'.

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

-- Test-suite doctests
--     Default-language: Haskell98
--     Type:    exitcode-stdio-1.0
--     Main-is: Doctest.hs
--     Hs-source-dirs: test
--     Build-depends:
--           base
--         , directory    >= 1.0
--         , doctest      >= 0.8
--         , doctest-prop >= 0.1
--         , filepath     >= 1.3

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , bytestring           >= 0.9.2.1
        , conduit              >= 1.1.0
        , exceptions           >= 0.5
        , filepath             >= 1.4
        , gitlib               >= 1.3.1
        , hex                  >= 0.1.2
        , lifted-base          >= 0.2.0.2
        , system-fileio        >= 0.3.11
        , tagged               >= 0.2.3.1
        , text                 >= 0.11.2
        , transformers         >= 0.3.0.0
        , unordered-containers >= 0.2.3.0
    exposed-modules:
        Git.Utils
