Name:                gitlib
Version:             1.2.0
Synopsis:            API library for working with Git repositories
License-file:        LICENSE
License:             MIT
Author:              John Wiegley
Maintainer:          johnw@fpcomplete.com
Build-Type:          Simple
Cabal-Version:       >=1.10
Category:            FFI
Description:
  @gitlib@ is a high-level, lazy and conduit-aware set of abstractions for
  programming with Git types.  Several different backends are available,
  including one for the libgit2 C library (<http://libgit2.github.com>) (see
  @gitlib-libgit2@).  The aim is both type-safety and convenience of use for
  Haskell users, combined with high performance and minimal memory footprint
  by taking advantage of Haskell's laziness and the conduit library's
  deterministic resource cleanup.
  .
  For further information, as well as typical use cases, see "Git.Tutorial".

Source-repository head
  type: git
  location: git://github.com/fpco/gitlib.git

Test-suite doctests
    Default-language: Haskell98
    Type:    exitcode-stdio-1.0
    Main-is: Doctest.hs
    Hs-source-dirs: test
    Build-depends:      
          base
        , directory    >= 1.0
        , doctest      >= 0.8
        , doctest-prop >= 0.1
        , filepath     >= 1.3

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , bytestring           >= 0.9.2.1
        , conduit              >= 1.0.0
        , containers           >= 0.4.2.1
        , data-default         >= 0.5.0
        , failure              >= 0.2.0.1
        , lifted-base          >= 0.2
        , system-filepath      >= 0.4.7
        , tagged               >= 0.2.3.1
        , transformers         >= 0.3.0.0
        , text                 >= 0.11.2
        , time                 >= 1.4
    exposed-modules:
        Git
        Git.Tutorial
