Name:          gitlib
Version:       3.1.2
Synopsis:      API library for working with Git repositories
License-file:  LICENSE
License:       MIT
Author:        John Wiegley
Maintainer:    johnw@newartisans.com
Build-Type:    Simple
Cabal-Version: >=1.10
Category:      FFI
Homepage:      https://github.com/jwiegley/gitlib
Description:
  @gitlib@ is a high-level, lazy and conduit-aware set of abstractions for
  programming with Git types.  Several different backends are available,
  including one for the libgit2 C library (<http://libgit2.github.com>) (see
  @gitlib-libgit2@).  The aim is both type-safety and convenience of use for
  Haskell users, combined with high performance and minimal memory footprint
  by taking advantage of Haskell's laziness and the conduit library's
  deterministic resource cleanup.
  .
  For further information, as well as typical use cases, see "Git.Tutorial".

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

-- Test-suite doctests
--     Default-language: Haskell98
--     Type:    exitcode-stdio-1.0
--     Main-is: Doctest.hs
--     Hs-source-dirs: test
--     Build-depends:
--           base
--         , directory    >= 1.0
--         , doctest      >= 0.8
--         , doctest-prop >= 0.1
--         , filepath     >= 1.3

Library
    default-language:   Haskell98
    ghc-options: -Wall
    build-depends:
          base                 >= 3 && < 5
        , base16-bytestring    >= 0.1.1.5
        , bytestring           >= 0.9.2.1
        , conduit              >= 1.2.8
        , conduit-combinators  >= 1
        , containers           >= 0.4.2.1
        , directory            >= 1.1.0.2
        , exceptions           >= 0.5
        , filepath             >= 1.3
        , hashable             >= 1.1.2.5
        , mtl                  >= 2.1.2
        , resourcet            >= 1.1.0
        , semigroups           >= 0.11
        , tagged               >= 0.2.3.1
        , text                 >= 0.11.2
        , time                 >= 1.4
        , transformers         >= 0.3.0.0
        , unordered-containers >= 0.2.3.0
        , unliftio-core        >= 0.1.1
        , unliftio
    if !os(mingw32)
        build-depends:
          unix                 >= 2.5.1.1
    else
        build-depends:
          unix-compat          >= 0.4
    exposed-modules:
        Git
        Git.Blob
        Git.Commit
        Git.Commit.Push
        Git.Object
        Git.Reference
        Git.Repository
        Git.Tree
        Git.Tree.Builder
        Git.Tree.Builder.Pure
        Git.Tree.Working
        Git.Tutorial
        Git.Types
        Git.Utils
        Git.Working
    default-extensions:
        BangPatterns
        ConstraintKinds
        DeriveDataTypeable
        FlexibleContexts
        FunctionalDependencies
        MultiParamTypeClasses
        OverloadedStrings
        RankNTypes
        TypeFamilies
        ViewPatterns
