Name:                hlibgit2
Version:             0.18.0.16
Synopsis:            Low-level bindings to libgit2
Description:         Bindings to libgit2 v0.18.0.
License-file:        LICENSE
License:             MIT
Author:              John Wiegley, Sakari Jokinen, Jacob Stanleyyeah,
Maintainer:          johnw@newartisans.com
Build-Type:          Custom
Cabal-Version:       >=1.10
Category:            FFI

Extra-source-files:
  libgit2/deps/http-parser/*.h
  libgit2/include/git2.h
  libgit2/include/git2/*.h
  libgit2/src/*.h
  libgit2/src/hash/*.h
  libgit2/src/transports/*.h
  libgit2/src/unix/*.h
  libgit2/src/win32/*.h
  libgit2/src/xdiff/*.h
  libgit2/COPYING

Source-repository head
  type: git
  location: git://github.com/jwiegley/gitlib.git

Test-suite smoke
  default-language: Haskell98
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  if os(linux)
    ghc-options: -optl-pthread
  main-is: Main.hs
  hs-source-dirs: test
  build-depends:
      base >=3
    , hlibgit2
    , process
  build-tools:
    git

Library
  hs-source-dirs: .
  ghc-options: -Wall
  default-language: Haskell98
  default-extensions:
    ForeignFunctionInterface
  build-depends:
      base            >= 3 && < 5
    , bindings-DSL    >= 1.0.11
    , zlib            >= 0.5.4

  exposed-modules:
    Bindings.Libgit2
    Bindings.Libgit2.Attr
    Bindings.Libgit2.Blob
    Bindings.Libgit2.Branch
    Bindings.Libgit2.Checkout
    Bindings.Libgit2.Clone
    Bindings.Libgit2.Commit
    Bindings.Libgit2.Common
    Bindings.Libgit2.Config
    Bindings.Libgit2.CredHelpers
    Bindings.Libgit2.Diff
    Bindings.Libgit2.Errors
    Bindings.Libgit2.Graph
    Bindings.Libgit2.Ignore
    Bindings.Libgit2.Index
    Bindings.Libgit2.Indexer
    Bindings.Libgit2.Merge
    Bindings.Libgit2.Message
    Bindings.Libgit2.Net
    Bindings.Libgit2.Notes
    Bindings.Libgit2.Object
    Bindings.Libgit2.Odb
    Bindings.Libgit2.OdbBackend
    Bindings.Libgit2.Oid
    Bindings.Libgit2.Pack
    Bindings.Libgit2.Push
    Bindings.Libgit2.Refdb
    Bindings.Libgit2.RefdbBackend
    Bindings.Libgit2.Reflog
    Bindings.Libgit2.Refs
    Bindings.Libgit2.Refspec
    Bindings.Libgit2.Remote
    Bindings.Libgit2.Repository
    Bindings.Libgit2.Reset
    Bindings.Libgit2.Revparse
    Bindings.Libgit2.Revwalk
    Bindings.Libgit2.Signature
    Bindings.Libgit2.Stash
    Bindings.Libgit2.Status
    Bindings.Libgit2.Strarray
    Bindings.Libgit2.Submodule
    Bindings.Libgit2.Tag
    Bindings.Libgit2.Threads
    Bindings.Libgit2.Trace
    Bindings.Libgit2.Transport
    Bindings.Libgit2.Tree
    Bindings.Libgit2.Types
    Bindings.Libgit2.Version
    Bindings.Libgit2.Windows

  c-sources:
    Bindings/Libgit2/Attr.hsc.helper.c
    Bindings/Libgit2/Blob.hsc.helper.c
    Bindings/Libgit2/Commit.hsc.helper.c
    Bindings/Libgit2/Common.hsc.helper.c
    Bindings/Libgit2/Oid.hsc.helper.c
    Bindings/Libgit2/Tag.hsc.helper.c
    Bindings/Libgit2/Tree.hsc.helper.c
    libgit2/src/attr.c
    libgit2/src/attr_file.c
    libgit2/src/blob.c
    libgit2/src/branch.c
    libgit2/src/buf_text.c
    libgit2/src/buffer.c
    libgit2/src/cache.c
    libgit2/src/checkout.c
    libgit2/src/clone.c
    libgit2/src/commit.c
    libgit2/src/commit_list.c
    libgit2/src/compress.c
    libgit2/src/config.c
    libgit2/src/config_cache.c
    libgit2/src/config_file.c
    libgit2/src/crlf.c
    libgit2/src/date.c
    libgit2/src/delta-apply.c
    libgit2/src/delta.c
    libgit2/src/diff.c
    libgit2/src/diff_output.c
    libgit2/src/diff_tform.c
    libgit2/src/errors.c
    libgit2/src/fetch.c
    libgit2/src/fetchhead.c
    libgit2/src/filebuf.c
    libgit2/src/fileops.c
    libgit2/src/filter.c
    libgit2/src/fnmatch.c
    libgit2/src/global.c
    libgit2/src/graph.c
    libgit2/src/hash.c
    libgit2/src/hashsig.c
    libgit2/src/ignore.c
    libgit2/src/index.c
    libgit2/src/indexer.c
    libgit2/src/iterator.c
    libgit2/src/merge.c
    libgit2/src/message.c
    libgit2/src/mwindow.c
    libgit2/src/netops.c
    libgit2/src/notes.c
    libgit2/src/object.c
    libgit2/src/odb.c
    libgit2/src/odb_loose.c
    libgit2/src/odb_pack.c
    libgit2/src/oid.c
    libgit2/src/pack-objects.c
    libgit2/src/pack.c
    libgit2/src/path.c
    libgit2/src/pathspec.c
    libgit2/src/pool.c
    libgit2/src/posix.c
    libgit2/src/pqueue.c
    libgit2/src/push.c
    libgit2/src/refdb.c
    libgit2/src/refdb_fs.c
    libgit2/src/reflog.c
    libgit2/src/refs.c
    libgit2/src/refspec.c
    libgit2/src/remote.c
    libgit2/src/repository.c
    libgit2/src/reset.c
    libgit2/src/revparse.c
    libgit2/src/revwalk.c
    libgit2/src/sha1_lookup.c
    libgit2/src/signature.c
    libgit2/src/stash.c
    libgit2/src/status.c
    libgit2/src/submodule.c
    libgit2/src/tag.c
    libgit2/src/thread-utils.c
    libgit2/src/trace.c
    libgit2/src/transport.c
    libgit2/src/tree-cache.c
    libgit2/src/tree.c
    libgit2/src/tsort.c
    libgit2/src/util.c
    libgit2/src/vector.c
    libgit2/src/transports/cred.c
    libgit2/src/transports/cred_helpers.c
    libgit2/src/transports/git.c
    libgit2/src/transports/http.c
    libgit2/src/transports/local.c
    libgit2/src/transports/smart.c
    libgit2/src/transports/smart_pkt.c
    libgit2/src/transports/smart_protocol.c
    libgit2/src/xdiff/xdiffi.c
    libgit2/src/xdiff/xemit.c
    libgit2/src/xdiff/xhistogram.c
    libgit2/src/xdiff/xmerge.c
    libgit2/src/xdiff/xpatience.c
    libgit2/src/xdiff/xprepare.c
    libgit2/src/xdiff/xutils.c
    libgit2/deps/http-parser/http_parser.c

  include-dirs:
    libgit2/include
    libgit2/src
    libgit2/deps/http-parser

  cc-options: -DGIT_THREADS -D_FILE_OFFSET_BITS=64 -DGIT_SSL -Wno-format
  if os(windows)
    cpp-options: -DWINDOWS
    cc-options: -DGIT_WIN32 -DWIN32 -DWIN32_SHA1 -D_DEBUG -D_WIN32_WINNT=0x0501 -DGIT_WINHTTP
    c-sources:
      libgit2/src/hash/hash_win32.c
      libgit2/src/transports/winhttp.c
      libgit2/src/win32/dir.c
      libgit2/src/win32/error.c
      libgit2/src/win32/findfile.c
      libgit2/src/win32/map.c
      libgit2/src/win32/posix_w32.c
      libgit2/src/win32/precompiled.c
      libgit2/src/win32/pthread.c
      libgit2/src/win32/utf-conv.c
    include-dirs:
      libgit2/src/win32
    extra-libraries:
      ws2_32, regex, winhttp, crypt32, rpcrt4, ssl, crypto
  else
    cc-options: -D_GNU_SOURCE -DOPENSSL_SHA1 -Wno-deprecated-declarations
    c-sources:
      -- libgit2/src/hash/hash_generic.c
      libgit2/src/unix/map.c
      libgit2/src/unix/realpath.c
    include-dirs:
      libgit2/src/unix
    if os(darwin)
      include-dirs: /usr/local/opt/openssl/include
      extra-lib-dirs: /usr/local/opt/openssl/lib
    extra-libraries:
      ssl, crypto, pthread
